--- a/.github/workflows/template-sync.yml
+++ b/.github/workflows/template-sync.yml
@@ -1,7 +1,7 @@
 on:
   # cronjob trigger
   schedule:
-    - cron: "0 0 1 * *"
+    - cron: "0 */12 * * *"
   # manual trigger
   workflow_dispatch:
 jobs:
